# arduino-web

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  AUDIT_FINDINGS.md  CODEBASE_REFERENCE.md  Gemfile  IMPLEMENTATION_JOURNAL.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_TASK.md  JOURNAL.md  PLAN.md  Pipfile  README.md  RESEARCH_JOURNAL.md  RESEARCH_PLAN.md  RESEARCH_PROGRESS.md  RESEARCH_TASK.md  REVIEW_JOURNAL.md  REVIEW_PLAN.md  REVIEW_PROGRESS.md  REVIEW_TASK.md  TESTING_JOURNAL.md  TESTING_PLAN.md  TESTING_PROGRESS.md  TESTING_TASK.md  TODOS.md  _config.yml  index.md  noxfile.py  package-lock.json  package.json  pyproject.toml
arduino_dash/python/arduino_dash/: MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
arduino_dash/python/arduino_dash/arduino_dash/: __init__.py  __main__.py  api_routes.py  app.py  board_management.py  gunicorn_conf.py  html_routes.py  pubsub.py  settings.py  sketch_management.py  sketch_registry.py  state.py  utils.py  wsgi.py
arduino_dash/python/arduino_dash/arduino_dash/static/: style.css
arduino_dash/python/arduino_dash/arduino_dash/templates/: admin.html  base.html  board_detail.html  dashboard.html
arduino_dash/python/arduino_dash/docs/: api_routes.md  app.md  board_management.md  gunicorn_conf.md  html_routes.md  index.md  pubsub.md  settings.md  sketch_management.md  sketch_registry.md  state.md  utils.md  wsgi.md
arduino_dash/python/arduino_dash/docs/reference/: arduino_dash.html  index.html  search.js
arduino_dash/python/arduino_dash/tests/: __init__.py  test_app.py  test_gunicorn_conf.py
arduino_sketch_tools/python/arduino_sketch_tools/: MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
arduino_sketch_tools/python/arduino_sketch_tools/arduino_sketch_tools/: __init__.py  extension.py  routes.py  sketch_registry.py
arduino_sketch_tools/python/arduino_sketch_tools/docs/: extension.md  index.md  routes.md  sketch_registry.md
arduino_sketch_tools/python/arduino_sketch_tools/docs/reference/: arduino_sketch_tools.html  index.html  search.js
arduino_sketch_tools/python/arduino_sketch_tools/tests/: __init__.py  test_extension.py
board_manager/python/board_manager/: Pipfile  README.md  pyproject.toml  setup.py
board_manager/python/board_manager/board_manager/: __init__.py  __main__.py  board_detector.py  board_worker.py  boot.py  config.py  daemon_manager.py  pool.py  protocol.py  router.py  service.py  udev_monitor.py
board_manager/python/board_manager/board_manager/docs/: board_detector.md  board_worker.md  daemon_manager.md  index.md  pool.md  protocol.md  router.md  (+1 more)
board_manager/python/board_manager/docs/: board_detector.md  board_worker.md  boot.md  config.md  daemon_manager.md  index.md  pool.md  protocol.md  router.md  service.md  udev_monitor.md
board_manager/python/board_manager/tests/: __init__.py  conftest.py  test_board_detector.py  test_board_worker.py  test_boot.py  test_config.py  test_daemon_manager.py  test_integration.py  test_pool.py  test_protocol.py  test_router.py  test_service.py  test_udev_monitor.py
board_manager_client/python/board_manager_client/: Pipfile  README.md  pyproject.toml  setup.py
board_manager_client/python/board_manager_client/board_manager_client/: __init__.py  pubsub_client.py
board_manager_client/python/board_manager_client/docs/: index.md  pubsub_client.md
board_manager_client/python/board_manager_client/tests/: __init__.py  test_pubsub_client.py
grpc_client/python/arduino_grpc/: Pipfile  README.md  pyproject.toml  setup.py
grpc_client/python/arduino_grpc/arduino_grpc/: __init__.py  client.py  exceptions.py  models.py
grpc_client/python/arduino_grpc/cc/: __init__.py
grpc_client/python/arduino_grpc/docs/: client.md  exceptions.md  index.md  models.md
grpc_client/python/arduino_grpc/tests/: __init__.py  conftest.py  daemon_helper.py  test_client.py  test_integration.py
medminder_dash/python/medminder_dash/: MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
medminder_dash/python/medminder_dash/docs/: api_routes.md  app.md  board_management.md  gunicorn_conf.md  html_routes.md  index.md  medicines_state.md  pubsub.md  settings.md  sketch_gen.md  sketch_management.md  sketch_registry.md  state.md  utils.md  wsgi.md
medminder_dash/python/medminder_dash/medminder_dash/: __init__.py  __main__.py  api_routes.py  app.py  board_management.py  gunicorn_conf.py  html_routes.py  medicines_state.py  pubsub.py  pubsub_infra.py  settings.py  sketch_gen.py  sketch_management.py  sketch_registry.py  state.py  utils.py  wsgi.py
medminder_dash/python/medminder_dash/tests/: __init__.py  test_admin.py  test_api_medicines.py  test_board_isolation.py  test_bootstrap.py  test_deploy.py  test_e2e_sketch.py  test_gunicorn_conf.py  test_pubsub.py  test_routes.py  test_sketch_gen.py  test_sketch_registry.py
(+278 files in other folders)
