[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arduino-grpc"
version = "0.1.0"
description = "gRPC client for Arduino CLI"
requires-python = ">=3.10"
dynamic = ["readme", "authors", "keywords"]
dependencies = [
    "googleapis-common-protos>=1.75.0",
    "grpcio>=1.80.0",
    "protobuf>=6.33.6",
]

[tool.setuptools.packages.find]
include = ["arduino_grpc*", "cc*"]

[tool.ruff]
exclude = ["cc/arduino/cli/commands/v1/"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
